[gd_scene load_steps=11 format=3 uid="uid://c71hfeo5hkdb8"]

[ext_resource type="Script" path="res://scripts/block.gd" id="1_hl7kk"]
[ext_resource type="Texture2D" uid="uid://dxxx4me2bgok8" path="res://images/animal1.png" id="2_p4k5b"]
[ext_resource type="Texture2D" uid="uid://du4ch2lne6t87" path="res://images/help-alt-svgrepo-com.png" id="2_x7k56"]
[ext_resource type="StyleBox" uid="uid://b4iya6kor7dfn" path="res://boxStyleNotPressed.tres" id="3_krv8a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_22mnq"]
size = Vector2(297.705, 378.642)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cb3cw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6qia5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8oua2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d3wcs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_beoxt"]

[node name="animalArea" type="Area2D"]
process_mode = 3
input_pickable = false
monitoring = false
script = ExtResource("1_hl7kk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -8.5)
scale = Vector2(0.141079, 0.393512)
shape = SubResource("RectangleShape2D_22mnq")

[node name="AnimalImage" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_p4k5b")

[node name="Panel" type="Panel" parent="AnimalImage"]
show_behind_parent = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -128.0
offset_right = -128.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.997455)
theme_override_styles/panel = ExtResource("3_krv8a")

[node name="Button" type="Button" parent="AnimalImage"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -128.0
offset_right = -128.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_cb3cw")
theme_override_styles/hover = SubResource("StyleBoxEmpty_6qia5")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_8oua2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_d3wcs")
theme_override_styles/focus = SubResource("StyleBoxEmpty_beoxt")

[node name="hiddenLayer" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_x7k56")

[node name="Panel" type="Panel" parent="hiddenLayer"]
show_behind_parent = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -128.0
offset_right = -128.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.997455)
theme_override_styles/panel = ExtResource("3_krv8a")

[node name="Button" type="Button" parent="hiddenLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -128.0
offset_right = -128.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_cb3cw")
theme_override_styles/hover = SubResource("StyleBoxEmpty_6qia5")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_8oua2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_d3wcs")
theme_override_styles/focus = SubResource("StyleBoxEmpty_beoxt")

[connection signal="pressed" from="AnimalImage/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="hiddenLayer/Button" to="." method="_on_button_pressed"]
